
	- Print SQL error message to STDERR instead of STDOUT.
	- Added a fourth test source.
	- Set library version to 3.0.5.

Wed Nov 10 18:33:14 CET 1999

	- Synced preproc.y with gram.y.

Thu Nov 11 07:49:44 CET 1999

	- Fixed bug in SET AUTOCOMMIT.

Mon Nov 22 18:26:34 CET 1999

	- Synced preproc.y with gram.y.
	- Clean up parser.
	- Set library version to 3.0.6.
        - Set ecpg version to 2.6.10.

Tue Nov 23 07:59:01 CET 1999

	- Ignore locale setting in ECPGdo.
	- Set library version to 3.0.7.

Fri Dec  3 16:35:07 CET 1999

	- Fixed memory leak in ecpglib.
	- Set library version to 3.0.8.

Wed Dec  8 08:26:13 CET 1999

	- Synced preproc.y with gram.y.
	- Clean up error handling.
        - Set ecpg version to 2.6.11.

Tue Dec 14 07:28:10 CET 1999

	- Synced preproc.y with gram.y.
	- Simplified string handling.

Wed Dec 15 08:10:52 CET 1999

	- Fixed typo in parser.
	- Included Bruce's patch to fix two more memory leaks in libecpg.
	- Some cleanup in libecpg.
	- Set library version to 3.0.9.
	- Set ecpg version to 2.6.12.

Thu Dec 23 13:25:05 CET 1999

	- Fixed command line parsing. 
	- Set ecpg version to 2.6.13.

Thu Jan  6 09:52:27 CET 2000

	- Synced preproc.y with gram.y.
	- Set ecpg version to 2.6.14.

Wed Jan 12 15:50:39 CET 2000

	- Made sure Rene Hogendoorn's patches make it into ecpg completely
	  except for the FETCH syntax change.

Fri Jan 14 21:17:46 CET 2000

	- Applied a minor patch to ecpglib.c.
	- Fixed initialization bugs.

Mon Jan 17 21:55:40 CET 2000

	- Synced preproc.y with gram.y.
	- Changed FETCH syntax using Rene's final patch. Made it more
	  standard compliant.

Thu Jan 20 10:00:50 CET 2000

	- Synced preproc.y with gram.y.

Fri Jan 21 14:52:27 CET 2000

	- Added more log output to ecpglib.

Thu Jan 27 08:12:05 CET 2000

	- Added another patch by Rene Hogendoorn.
	- Fixed error messages in pgc.l.
	- Improved variable parsing.
	- Synced preproc.y with gram.y.
	- Set library version to 3.0.10.
	- Set ecpg version to 2.7.0.
