@@ -5,9 +5,19 @@ int my_fun (void)
 	EXEC SQL BEGIN DECLARE SECTION;
 	int			sql_index = 0;
 	EXEC SQL END DECLARE SECTION;	
+	FILE *dbgs;
+
+	if ((dbgs = fopen("/tmp/log", "w")) != NULL)
+                ECPGdebug(1, dbgs);
 
 	EXEC SQL WHENEVER SQLERROR GOTO Error;
+
+	EXEC SQL CONNECT TO 'mm';
 	EXEC SQL SELECT MIN(index) INTO :sql_index FROM tab;
+	EXEC SQL DISCONNECT;
+
+	if (dbgs != NULL)
+                fclose(dbgs);  
 
 	return (sql_index);
 
